<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/c1_home"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ppic_home"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/dppic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editppic_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/edity" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/c1_home"
            app:layout_constraintStart_toEndOf="@id/c1_home"
            app:layout_constraintTop_toTopOf="@+id/c1_home"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_one"
                android:text="/@capturfri"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_home" />
        </android.support.constraint.ConstraintLayout>

        <ImageView
            android:id="@+id/setting_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings_black_24dp" />

        <ImageView
            android:id="@+id/notification_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:padding="5dp"
            app:layout_constraintEnd_toStartOf="@id/setting_home"
            app:layout_constraintTop_toTopOf="@+id/setting_home"
            app:srcCompat="@drawable/ic_notifications_black_24dp" />

        <ImageView
            android:id="@+id/edit_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:padding="5dp"
            app:layout_constraintEnd_toStartOf="@id/notification_home"
            app:layout_constraintTop_toTopOf="@+id/setting_home"
            app:srcCompat="@drawable/ic_edit_black_24dp" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/c2_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bordered_post"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c1_home">

            <ImageView
                android:id="@+id/refresh_post_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_autorenew_black_24dp" />

            <ProgressBar
                android:id="@+id/progressBar_post_home"
                style="?android:attr/progressBarStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_post_home"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c2_home">

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/editprofilesheet_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:background="@color/white"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/t1_edit_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_edit_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightback"
                android:fontFamily="@font/fredoka_one"
                android:hint="@string/fullname"
                android:inputType="textCapWords"
                android:padding="15dp"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/t2_edit_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t1_edit_home">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dob_edit_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightback"
                android:focusable="false"
                android:fontFamily="@font/fredoka_one"
                android:hint="@string/dob"
                android:padding="15dp"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/gender"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t2_edit_home" />

        <TextView
            android:id="@+id/gender_edit_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/boy"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <Switch
            android:id="@+id/switch_edit_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/gender_edit_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gender_edit_home" />

        <Button
            android:id="@+id/save_edit_home"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_edit_home" />

        <Button
            android:id="@+id/cancel_edit_home"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/save_edit_home"
            app:layout_constraintEnd_toStartOf="@id/save_edit_home" />

        <ProgressBar
            android:id="@+id/progressBar_editprofile_home"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/save_edit_home"
            app:layout_constraintTop_toTopOf="@id/save_edit_home"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>